--- a/Whistle/package.json
+++ b/Whistle/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "16.0.0",
 		"react-native": "0.50.3",
+		"react-native-sqlite-storage": "^3.3.4",
 		"react-navigation": "^1.0.0-beta.21"
 	},
 	"devDependencies": {
