--- a/Whistle/package.json
+++ b/Whistle/package.json
@@ -11,7 +11,8 @@
     "react": "16.0.0",
     "react-content-loader": "^2.0.2",
     "react-native": "0.50.3",
-    "react-native-svg": "^6.0.1-rc.2",
+    "react-native-content-loader": "^0.1.6",
+    "react-native-svg": "^6.0.1-rc.3",
     "react-navigation": "^1.0.0-beta.21"
   },
   "devDependencies": {
