--- a/Whistle/package.json
+++ b/Whistle/package.json
@@ -12,7 +12,9 @@
     "react-content-loader": "^2.0.2",
     "react-native": "0.50.3",
     "react-native-content-loader": "^0.1.6",
+    "react-native-elements": "^0.19.0",
     "react-native-svg": "^6.0.1-rc.3",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.21"
   },
   "devDependencies": {
