--- a/Whistle/package.json
+++ b/Whistle/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0",
     "react-content-loader": "^2.0.2",
     "react-native": "0.50.3",
+    "react-native-calendars": "^1.16.1",
     "react-native-content-loader": "^0.1.6",
     "react-native-elements": "^0.19.0",
     "react-native-hr": "^1.1.4",
