--- a/Whistle/package.json
+++ b/Whistle/package.json
@@ -16,6 +16,8 @@
     "react-native-content-loader": "^0.1.6",
     "react-native-elements": "^0.19.0",
     "react-native-hr": "^1.1.4",
+    "react-native-modal": "^5.0.0",
+    "react-native-simple-radio-button": "^2.7.1",
     "react-native-svg": "^6.0.1-rc.3",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.21"
