--- a/Whistle/package.json
+++ b/Whistle/package.json
@@ -17,6 +17,7 @@
     "react-native-elements": "^0.19.0",
     "react-native-hr": "^1.1.4",
     "react-native-modal": "^5.0.0",
+    "react-native-push-notification": "^3.0.2",
     "react-native-simple-radio-button": "^2.7.1",
     "react-native-svg": "^6.0.1-rc.3",
     "react-native-vector-icons": "^4.5.0",
