--- a/Whistle/package.json
+++ b/Whistle/package.json
@@ -18,6 +18,8 @@
     "react-native-hr": "^1.1.4",
     "react-native-maps": "^0.19.0",
     "react-native-modal": "^5.0.0",
+    "react-native-open-maps": "^0.1.1",
+    "react-native-openanything": "0.0.3",
     "react-native-push-notification": "^3.0.2",
     "react-native-simple-radio-button": "^2.7.1",
     "react-native-svg": "^6.0.1-rc.3",
